codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec_no_reason.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"  Would you like to run the following command?                                  "
"                                                                                "
"  $ echo hello world                                                            "
"                                                                                "
"› 1. Yes, proceed                                                               "
"  2. Yes, and don't ask again for this command                                  "
"  3. No, and tell Codex what to do differently esc                              "
"                                                                                "
"                                                                                "
"  Press enter to confirm or esc to cancel                                       "
"                                                                                "
